# anchor-bug-test

./: Anchor.toml  README.md
programs/anchor-bug-test/: Cargo.toml
programs/anchor-bug-test/src/: lib.rs
programs/anchor-example/: Cargo.toml
programs/anchor-example/src/: lib.rs
programs/main-program/: Cargo.toml
programs/main-program/src/: error.rs  lib.rs
tests/: anchor-bug-test.ts
